created the first register API
