# Routes/auth.route.js
@@ -1,0 +1,8 @@
+import express from "express";
+import { registerController } from "../Controllers/auth.controller.js";
+
+const authRoute = express.Router();
+
+authRoute.post("/register", registerController);
+
+export default authRoute;
